generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_object.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop11: value16, prop2: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        (property_identifier)
        (identifier value16)
      )
      (pair
        (property_identifier)
        (identifier value21)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
