generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_object1.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop13: value110, prop22: value210 }

AST:
(program
  (expression_statement
    (object
      (pair
        (property_identifier)
        (identifier value110)
      )
      (pair
        (property_identifier)
        (identifier value210)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
