generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_optional_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value18: string | undefined = undefined;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value18)
      (type_annotation
        (union_type
          (predefined_type)
          (literal_type
            (undefined)
          )
        )
      )
      (undefined)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value18",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
