generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_pair_pattern.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const { key1: value18 } = obj3;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (pair_pattern
          (property_identifier)
          (identifier value18)
        )
      )
      (identifier obj3)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "{ key1: value18 }",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
