generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_rest_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type RestTuple = [string, ...number[]];

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (tuple_type
      (predefined_type)
      (rest_type
        (array_type
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "RestTuple",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
